--- a/package.json
+++ b/package.json
@@ -1,28 +1,11 @@
 {
-  "name": "@jimp/core",
+  "name": "@jimp/gif",
   "version": "0.16.1",
-  "description": "Jimp core",
+  "description": "Default Jimp gif encoder/decoder.",
   "main": "dist/index.js",
   "module": "es/index.js",
-  "types": "types/index.d.ts",
-  "files": [
-    "dist",
-    "es",
-    "index.d.ts",
-    "fonts",
-    "types"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/oliver-moran/jimp.git"
-  },
-  "bugs": {
-    "url": "https://github.com/oliver-moran/jimp/issues"
-  },
+  "types": "index.d.ts",
   "scripts": {
-    "test": "cross-env BABEL_ENV=test mocha --require @babel/register test/**/*.js",
-    "test:watch": "npm run test -- --reporter min --watch",
-    "test:coverage": "nyc npm run test",
     "build": "npm run build:node:production && npm run build:module",
     "build:watch": "npm run build:node:debug -- -- --watch --verbose",
     "build:debug": "npm run build:node:debug",
@@ -31,25 +14,17 @@
     "build:node:debug": "cross-env BABEL_ENV=development npm run build:node",
     "build:node:production": "cross-env BABEL_ENV=production npm run build:node"
   },
-  "author": "Oliver Moran <oliver.moran@gmail.com>",
+  "author": "",
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.2",
     "@jimp/utils": "^0.16.1",
-    "any-base": "^1.1.0",
-    "buffer": "^5.2.0",
-    "exif-parser": "^0.1.12",
-    "file-type": "^9.0.0",
-    "load-bmfont": "^1.3.1",
-    "mkdirp": "^0.5.1",
-    "phin": "^2.9.1",
-    "pixelmatch": "^4.0.2",
-    "tinycolor2": "^1.4.1"
+    "gifwrap": "^0.9.2",
+    "omggif": "^1.0.9"
   },
-  "devDependencies": {
-    "should": "^13.2.3"
+  "peerDependencies": {
+    "@jimp/custom": ">=0.3.5"
   },
-  "xo": false,
   "publishConfig": {
     "access": "public"
   },
