--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@jimp/gif",
+  "name": "@jimp/plugin-blit",
   "version": "0.16.1",
-  "description": "Default Jimp gif encoder/decoder.",
+  "description": "Blit an image.",
   "main": "dist/index.js",
   "module": "es/index.js",
   "types": "index.d.ts",
   "scripts": {
+    "test": "cross-env BABEL_ENV=test mocha --require @babel/register",
+    "test:watch": "npm run test -- --reporter min --watch",
+    "test:coverage": "nyc npm run test",
     "build": "npm run build:node:production && npm run build:module",
     "build:watch": "npm run build:node:debug -- -- --watch --verbose",
     "build:debug": "npm run build:node:debug",
@@ -18,9 +21,12 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.2",
-    "@jimp/utils": "^0.16.1",
-    "gifwrap": "^0.9.2",
-    "omggif": "^1.0.9"
+    "@jimp/utils": "^0.16.1"
+  },
+  "devDependencies": {
+    "@jimp/custom": "^0.16.1",
+    "@jimp/jpeg": "^0.16.1",
+    "@jimp/test-utils": "^0.16.1"
   },
   "peerDependencies": {
     "@jimp/custom": ">=0.3.5"
