--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@jimp/plugin-circle",
+  "name": "@jimp/plugin-cover",
   "version": "0.16.1",
-  "description": "Creates a circle out of an image.",
+  "description": "cover an image.",
   "main": "dist/index.js",
   "module": "es/index.js",
   "types": "index.d.ts",
@@ -24,10 +24,16 @@
     "@jimp/utils": "^0.16.1"
   },
   "peerDependencies": {
-    "@jimp/custom": ">=0.3.5"
+    "@jimp/custom": ">=0.3.5",
+    "@jimp/plugin-crop": ">=0.3.5",
+    "@jimp/plugin-resize": ">=0.3.5",
+    "@jimp/plugin-scale": ">=0.3.5"
   },
   "devDependencies": {
     "@jimp/custom": "^0.16.1",
+    "@jimp/plugin-crop": "^0.16.1",
+    "@jimp/plugin-resize": "^0.16.1",
+    "@jimp/plugin-scale": "^0.16.1",
     "@jimp/test-utils": "^0.16.1"
   },
   "publishConfig": {
