--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@jimp/plugin-cover",
+  "name": "@jimp/plugin-dither",
   "version": "0.16.1",
-  "description": "cover an image.",
+  "description": "Dither an image.",
   "main": "dist/index.js",
   "module": "es/index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "cross-env BABEL_ENV=test mocha --require @babel/register",
-    "test:watch": "npm run test -- --reporter min --watch",
-    "test:coverage": "nyc npm run test",
     "build": "npm run build:node:production && npm run build:module",
     "build:watch": "npm run build:node:debug -- -- --watch --verbose",
     "build:debug": "npm run build:node:debug",
@@ -24,17 +21,7 @@
     "@jimp/utils": "^0.16.1"
   },
   "peerDependencies": {
-    "@jimp/custom": ">=0.3.5",
-    "@jimp/plugin-crop": ">=0.3.5",
-    "@jimp/plugin-resize": ">=0.3.5",
-    "@jimp/plugin-scale": ">=0.3.5"
-  },
-  "devDependencies": {
-    "@jimp/custom": "^0.16.1",
-    "@jimp/plugin-crop": "^0.16.1",
-    "@jimp/plugin-resize": "^0.16.1",
-    "@jimp/plugin-scale": "^0.16.1",
-    "@jimp/test-utils": "^0.16.1"
+    "@jimp/custom": ">=0.3.5"
   },
   "publishConfig": {
     "access": "public"
